CMAKE_MINIMUM_REQUIRED (VERSION 3.1.3)
PROJECT (libslave)

set(CMAKE_MODULE_PATH  "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
set(CMAKE_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_INCLUDE_PATH})

# Build flags
SET (CMAKE_CXX_STANDARD          11)
SET (CMAKE_CXX_STANDARD_REQUIRED TRUE)
SET (CMAKE_CXX_EXTENSIONS        FALSE)

IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU"
 OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    # Common options
    ADD_DEFINITIONS (-DUSE_PSI_1)
    ADD_DEFINITIONS (-DHAVE_PSI_1)
ENDIF ()

FIND_PACKAGE (Boost REQUIRED)
FIND_PACKAGE (Boost 1.41.0 COMPONENTS unit_test_framework system)
find_package (MySQL)

include_directories(
	${MYSQL_INCLUDE_DIR}
	${Boost_INCLUDE_DIRS}
)

FILE (GLOB HDR "*.h")
INSTALL (FILES ${HDR} DESTINATION include)
AUX_SOURCE_DIRECTORY (${CMAKE_CURRENT_SOURCE_DIR} SRC)

ADD_LIBRARY (slave STATIC ${SRC})
TARGET_LINK_LIBRARIES (slave ${MYSQL_STATIC_LIB})
# INSTALL (TARGETS slave DESTINATION lib64)

# Most probably statc mysql is built without fPIC, so, we can't build dynamic library with it
IF (NOT (MYSQL_LIB MATCHES "\.a$"))
    ADD_LIBRARY (slave_shared SHARED ${SRC})
    SET_TARGET_PROPERTIES (slave_shared PROPERTIES OUTPUT_NAME slave)
    TARGET_LINK_LIBRARIES (slave_shared ${MYSQL_LIB})
    # INSTALL (TARGETS slave_shared DESTINATION lib64)
ENDIF ()

IF (Boost_FOUND)
    ENABLE_TESTING ()
ENDIF (Boost_FOUND)
# ADD_SUBDIRECTORY (test)
